--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/nyancodeid/nyancss/v0.7.0-beta/dist/css/nyan.min.css" >
+     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +23,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body ny-app>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -36,5 +38,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="https://cdn.rawgit.com/nyancodeid/nyancss/v0.7.0-beta/dist/js/nyan.min.js" defer ></script>
   </body>
 </html>
