--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div ny-app>
+      <h3>React DnD implementation for <code>sortable-tree</code> and use <code>nyan-css</code></h3>
     <div id="root"></div>
     </div>
     <!--
